[tool.poetry]
name = "yt_poc"
version = "0.1.0"
description = ""
authors = ["Kyrylo Dehtiarenko <k.degtyarenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.86.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
yt-dlp = "^2023.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
